--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
 @import url(global.css);
 @import url(header.css);
-@import url(footer.css);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
