--- a/css/header.css
+++ b/css/header.css
@@ -42,6 +42,13 @@
     gap: 20px;
     flex-shrink: 0; 
 }
+.top__icons a{
+    opacity: 1;
+    transition: opacity 0.3s ease;
+    &:hover{
+        opacity: 0.7;
+    } 
+}
 .x-icon{
     width: 30px;
     height: 30px;
@@ -177,6 +184,9 @@
     .phone__top__nav__list a{
         color: rgb(218, 218, 218);
         text-decoration: none;
+        font-size: 24px;
+        font-family: 'Nunito', sans-serif;
+        font-weight: 700;
     }
     .phone__nav__list {
         list-style: none;
@@ -217,6 +227,13 @@
         gap: 20px;
         flex-shrink: 0;
         padding: 15px;
+    }
+    .phone__icons a{
+        opacity: 1;
+        transition: opacity 0.3s ease;
+        &:hover{
+            opacity: 0.7;
+        } 
     }
 }
 
