--- a/css/header.css
+++ b/css/header.css
@@ -117,11 +117,14 @@
     white-space: nowrap;
     font-weight: bold;
 }
-
+body.no-scroll {
+    overflow: hidden;
+}
 .nav__item a:hover {
     color: #ff6600;
 }
 @media (max-width: 1285px) {
+    
     .top {
         display: none;
     }
@@ -131,7 +134,7 @@
     .phone__top__header {
         display: flex;
         width: 100%;
-        height: 120px;
+        height: 121px;
         background-color: rgb(39, 39, 39);
         align-items: center; 
         justify-content: space-between; 
@@ -234,6 +237,9 @@
         &:hover{
             opacity: 0.7;
         } 
+    }
+    .phone__contacts {
+        padding-bottom: 50px;
     }
 }
 
