--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 @import url(header.css);
 @import url(section_header.css);
 @import url(section_bestseller.css);
-@import url(main.css);
+@import url(section_popular-items.css);
 * {
     margin: 0;
     padding: 0;
