--- a/css/section_popular-items.css
+++ b/css/section_popular-items.css
@@ -278,7 +278,7 @@
     max-height: 460px;
     border-radius: 15px;
     padding: 30px;
-    background-image: url(img/index/section__bestseller2/banner-mouse.png);
+    background-image: url(../img/index/section__bestseller2/banner-mouse.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
